--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -24,15 +24,31 @@
         android:textColor="@color/white"
         android:layout_margin="@dimen/default_margin"
         android:textStyle="bold"
+        android:textAlignment="center"
         android:layout_centerInParent="true"
         />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/gameOver_ET_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:hint="@string/default_edit_text"
+        android:layout_below="@+id/gameOver_LBL_text"
+        android:layout_centerHorizontal="true"/>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/gameover_BTN_backToMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/gameOver_LBL_text"
+        android:layout_below="@+id/gameOver_ET_name"
+        android:textAlignment="center"
         android:layout_margin="@dimen/default_margin"
-        android:text="@string/back"
-        android:layout_centerHorizontal="true"/>
+        android:text="@string/send"
+        android:layout_centerHorizontal="true"
+        />
+
+
 
 </RelativeLayout>
