--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="default_margin">16dp</dimen>
+    <dimen name="default_margin">8dp</dimen>
     <dimen name="mask_size">30dp</dimen>
+    <dimen name="default_heart_margin">8dp</dimen>
+    <dimen name="scoreTextSize">24sp</dimen>
+    <dimen name="scoreEntrySize">16sp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
