--- a/app/src/main/res/layout/fragment_scoreboard.xml
+++ b/app/src/main/res/layout/fragment_scoreboard.xml
@@ -15,7 +15,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/back_btn"
-            android:backgroundTint="@color/grey_600"/>
+            android:backgroundTint="@color/grey_900"
+            android:textColor="@color/white"
+            />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -31,6 +33,8 @@
             android:textSize="@dimen/scoreTextSize"
             android:textAlignment="center"
             android:layout_weight="1"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -41,6 +45,8 @@
             android:textSize="@dimen/scoreTextSize"
             android:textAlignment="center"
             android:layout_weight="1"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
