--- a/app/src/main/res/layout/score_item.xml
+++ b/app/src/main/res/layout/score_item.xml
@@ -2,12 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/score_CV_entry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/default_margin"
+        app:cardBackgroundColor="@color/grey_900"
+
         >
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -24,6 +28,7 @@
                 android:textSize="@dimen/scoreEntrySize"
                 android:textAlignment="center"
                 android:layout_weight="1"
+                android:textColor="@color/white"
                 />
 
             <com.google.android.material.textview.MaterialTextView
@@ -36,6 +41,8 @@
                 android:textSize="@dimen/scoreEntrySize"
                 android:textAlignment="center"
                 android:layout_weight="1"
+                android:textColor="@color/white"
+
                 />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.cardview.widget.CardView>
