--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -35,6 +35,7 @@
         android:ems="10"
         android:inputType="text"
         android:hint="@string/default_edit_text"
+        android:textColor="@color/white"
         android:layout_below="@+id/gameOver_LBL_text"
         android:layout_centerHorizontal="true"/>
 
