--- a/app/src/main/res/layout/score_item.xml
+++ b/app/src/main/res/layout/score_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_margin"
         app:cardBackgroundColor="@color/grey_900"
-
+        app:cardCornerRadius="@dimen/card_corners"
         >
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
