--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -48,6 +48,8 @@
         android:layout_margin="@dimen/default_margin"
         android:text="@string/send"
         android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/grey_900"
+        android:textColor="@color/white"
         />
 
 
