--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -44,6 +44,8 @@
         android:text="@string/score_0"
         android:layout_alignParentEnd="true"
         android:textSize="@dimen/scoreTextSize"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_margin="@dimen/default_margin"
         tools:ignore="RelativeOverlap" />
 
